# idea-board-rust

./: .env.example  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
src/: constants.rs  idea.rs  like.rs  main.rs  schema.rs
src/spec/: Idea.postman_collection.json
